Corrected my github URL

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: info@matstople.se
   facebook: 
   flickr: 
-  github: mtop.github.io
+  github: github.com/mtop
   instagram: 
   linkedin: 
   pinterest: 
