Corrected my github URL [2]

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ footer-links:
   email: info@matstople.se
   facebook: 
   flickr: 
-  github: github.com/mtop
+  github: mtop
   instagram: 
   linkedin: 
   pinterest: 
